client/src/index.css
@import "./styles/reset.css";
@import "./styles/colors.css";
@import "./styles/space.css";
@import "./styles/text.css";
@import "./styles/rounded.css";

:root[data-theme="auto"] {
  color-scheme: light dark;
}

:root[data-theme="light"] {
  color-scheme: light;
}

:root[data-theme="dark"] {
  color-scheme: dark;
}

:root {
  --primary: var(--c-sky-500);
  --primary-hover: light-dark(var(--c-sky-600), var(--c-sky-400));
  --bg: light-dark(var(--c-zinc-50), var(--c-zinc-900));
  --fg: light-dark(var(--c-zinc-900), var(--c-zinc-50));
  --card-bg: light-dark(var(--c-zinc-100), var(--c-zinc-800));
  --ring-color: light-dark(var(--c-zinc-200), var(--c-zinc-700));
  --btn-bg: light-dark(var(--c-zinc-200), var(--c-zinc-700));
  --btn-hover: light-dark(var(--c-zinc-300), var(--c-zinc-600));
}

#root {
  isolation: isolate;
}

body {
  background-color: var(--bg);
  overflow-y: scroll;
}

nav,
main {
  margin-inline: auto;
  max-width: 96rem;
}

main {
  padding-inline: var(--space-2);
}

button {
  cursor: pointer;
  border: none;
  background: none;
}

.truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.center {
  display: grid;
  position: absolute;
  place-items: center;
  inset: 0;
}

.modal_btn {
  display: grid;
  position: absolute;
  place-items: center;
  border-radius: var(--rounded-full);
  background-color: var(--c-zinc-900);
  width: var(--space-10);
  height: var(--space-10);
  color: var(--c-white);
  &:hover {
    background-color: var(--c-zinc-800);
  }
}

